--- a/.gitignore
+++ b/.gitignore
@@ -471,3 +471,7 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Allure
+/tests/**/allure-report
+/tests/**/allure-results
